# tree-sitter-mdx

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  flake.nix  go.mod  grammar.js  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  test.mdx  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-mdx.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_mdx/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterMDX/: mdx.h
bindings/swift/TreeSitterMDXTests/: TreeSitterMDXTests.swift
queries/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: statements.txt
